modified the github link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/Mridulkhanal" class="social-link">
               <img src="./assets/images/github.png" alt="github icon" width="20">
             </a>
           </li>
